[gd_scene format=4 uid="uid://ogiq47ha7y46"]

[ext_resource type="Script" uid="uid://3eqdl10t4vlq" path="res://scripts/Level3.gd" id="1_level3"]
[ext_resource type="Texture2D" uid="uid://c4hs4f2jm46ah" path="res://assets/tileset/IMG_8595.png" id="1_p6vls"]
[ext_resource type="Texture2D" uid="uid://c0p75qlq6b0d4" path="res://assets/tileset/IMG_8594.png" id="2_hhfj6"]
[ext_resource type="Texture2D" uid="uid://3kss6o2xwcte" path="res://assets/sun.png" id="2_vcx5n"]
[ext_resource type="Texture2D" uid="uid://b07mtiub2oxdk" path="res://assets/tileset/IMG_8596.png" id="3_wae8j"]
[ext_resource type="Script" uid="uid://yuww3d2tuiox" path="res://scripts/kill_zone.gd" id="4_ha73p"]
[ext_resource type="PackedScene" uid="uid://b8d8d8d8d8d8" path="res://scenes/Player.tscn" id="5_vcx5n"]
[ext_resource type="Texture2D" uid="uid://b0kawc7eyibob" path="res://assets/tileset/IMG_8601.png" id="6_56dhn"]
[ext_resource type="Texture2D" uid="uid://bbsllit4hcdup" path="res://assets/batu.png" id="6_wae8j"]
[ext_resource type="Script" uid="uid://i6dk7v7i08np" path="res://scripts/RockChain.gd" id="7_rock_chain"]
[ext_resource type="Script" uid="uid://km18j4lp2wv1" path="res://scripts/spike_spawner.gd" id="11_ax3dk"]
[ext_resource type="PackedScene" uid="uid://dcagtpnah3328" path="res://scenes/flag.tscn" id="12_flag"]
[ext_resource type="Script" uid="uid://c14by3x1p08u4" path="res://scripts/flag_trigger.gd" id="13_trigger"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_osu2p"]
size = Vector2(2511, 41)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6k8qy"]
texture = ExtResource("6_56dhn")
margins = Vector2i(112, 116)
texture_region_size = Vector2i(124, 124)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
3:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
3:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
0:4/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-62, -62, 62, -62, 62, 62, -62, 62)
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8rhjg"]
tile_size = Vector2i(124, 124)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6k8qy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trigger"]
size = Vector2(150, 300)

[sub_resource type="CircleShape2D" id="CircleShape2D_rock"]
radius = 58.00862

[node name="Level3" type="Node2D" unique_id=1259302262]
script = ExtResource("1_level3")

[node name="Background" type="ColorRect" parent="." unique_id=1143105163]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.76862746, 0.92941177, 1, 1)

[node name="Sun" type="Sprite2D" parent="Background" unique_id=1785175935]
position = Vector2(1737, 162)
texture = ExtResource("2_vcx5n")

[node name="Img8595" type="Sprite2D" parent="Background" unique_id=1515150549]
position = Vector2(898, 515)
texture = ExtResource("1_p6vls")

[node name="Img8594" type="Sprite2D" parent="Background" unique_id=533314557]
position = Vector2(364, 348)
texture = ExtResource("2_hhfj6")

[node name="Img8597" type="Sprite2D" parent="Background" unique_id=1119647206]
position = Vector2(1758, 682)
texture = ExtResource("1_p6vls")

[node name="KillZone" type="Area2D" parent="." unique_id=1780928457]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_ha73p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone" unique_id=1562238353]
position = Vector2(940.5, 846)
shape = SubResource("RectangleShape2D_osu2p")

[node name="Checkpoint" type="Node2D" parent="." unique_id=1989630016]

[node name="Ground" type="Node2D" parent="." unique_id=391726407]
position = Vector2(960, 870)

[node name="SpikeSpawner" type="Node2D" parent="Ground" unique_id=650315505]
position = Vector2(-1014, -253)
script = ExtResource("11_ax3dk")

[node name="SpikeSpawner2" type="Node2D" parent="Ground" unique_id=922743636]
position = Vector2(991, -253)
script = ExtResource("11_ax3dk")

[node name="TileMapLayer" type="TileMapLayer" parent="Ground" unique_id=1532937240]
position = Vector2(-960, -870)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAAAAAoAAAABAAEAAAAAAAsAAAABAAIAAAAAAAwAAAABAAIAAAAAAA0AAAABAAIAAAABAAoAAAABAAEAAAACAAoAAAABAAEAAAADAAoAAAABAAEAAAABAA8AAAABAAIAAAAAAA4AAAABAAIAAAAAAA8AAAABAAIAAAAAABEAAAABAAIAAAABABAAAAABAAIAAAAIAAoAAAABAAEAAAAKAAsAAAABAAIAAAAGAAoAAAABAAEAAAAHAAoAAAABAAEAAAAEAAoAAAABAAEAAAAFAAoAAAABAAEAAAAMAAoAAAABAAEAAAANAAoAAAABAAEAAAAOAAoAAAABAAEAAAAPAAoAAAABAAEAAAAQAAoAAAABAAEAAAARAAoAAAABAAEAAAASAAoAAAABAAEAAAATAAoAAAABAAEAAAAUAAoAAAABAAEAAAAVAAoAAAABAAEAAAAWAAoAAAABAAEAAAAXAAoAAAABAAEAAAAYAAoAAAABAAEAAAAZAAoAAAABAAEAAAAZAAwAAAABAAIAAAAaAAoAAAABAAEAAAAaAAwAAAABAAIAAAAbAAoAAAABAAEAAAAcAAoAAAABAAEAAAAJABAAAAABAAIAAAAKABAAAAABAAIAAAALAA8AAAABAAIAAAALABAAAAABAAIAAAAHAA8AAAABAAIAAAAVAA0AAAABAAIAAAAVAA4AAAABAAIAAAAVAA8AAAABAAIAAAAWAA0AAAABAAIAAAAWAA4AAAABAAIAAAAWAA8AAAABAAIAAAAXAA0AAAABAAIAAAAXAA4AAAABAAIAAAAXAA8AAAABAAIAAAATAA8AAAABAAIAAAAUAA0AAAABAAIAAAAUAA4AAAABAAIAAAAUAA8AAAABAAIAAAAYAA0AAAABAAIAAAAYAA4AAAABAAIAAAAYAA8AAAABAAIAAAAZAA0AAAABAAIAAAAZAA4AAAABAAIAAAAZAA8AAAABAAIAAAAaAA0AAAABAAIAAAAaAA4AAAABAAIAAAAaAA8AAAABAAIAAAAbAA0AAAABAAIAAAAbAA4AAAABAAIAAAAbAA8AAAABAAIAAAAcAA0AAAABAAIAAAAcAA4AAAABAAIAAAAcAA8AAAABAAIAAAAEABEAAAABAAIAAAAFABAAAAABAAIAAAAFABEAAAABAAIAAAAGABAAAAABAAIAAAAGABEAAAABAAIAAAAHABAAAAABAAIAAAAHABEAAAABAAIAAAAIABAAAAABAAIAAAAIABEAAAABAAIAAAAJABEAAAABAAIAAAAKABEAAAABAAIAAAALABEAAAABAAIAAAAMABAAAAABAAIAAAAMABEAAAABAAIAAAANABAAAAABAAIAAAANABEAAAABAAIAAAAOABAAAAABAAIAAAAOABEAAAABAAIAAAAPABAAAAABAAIAAAAPABEAAAABAAIAAAAQABAAAAABAAIAAAAQABEAAAABAAIAAAARABAAAAABAAIAAAARABEAAAABAAIAAAASABAAAAABAAIAAAASABEAAAABAAIAAAATABAAAAABAAIAAAATABEAAAABAAIAAAAUABAAAAABAAIAAAAUABEAAAABAAIAAAAVABAAAAABAAIAAAAVABEAAAABAAIAAAAXABAAAAABAAIAAAAXABEAAAABAAIAAAAYABAAAAABAAIAAAAYABEAAAABAAIAAAAZABAAAAABAAIAAAAZABEAAAABAAIAAAAWABAAAAABAAIAAAAWABEAAAABAAIAAAAaABAAAAABAAIAAAAaABEAAAABAAIAAAAbABAAAAABAAIAAAAbABEAAAABAAIAAAAcABAAAAABAAIAAAAcABEAAAABAAIAAAAfABEAAAABAAIAAAABABEAAAABAAIAAAACABEAAAABAAIAAAADABEAAAABAAIAAAAEAAwAAAABAAIAAAAFAAwAAAABAAIAAAAGAAwAAAABAAIAAAAHAAwAAAABAAIAAAAIAA0AAAABAAIAAAAJAA0AAAABAAIAAAAKAA0AAAABAAIAAAAJAA4AAAABAAIAAAAHAA0AAAABAAIAAAAKAA4AAAABAAIAAAAEAA0AAAABAAIAAAALAA0AAAABAAIAAAALAA4AAAABAAIAAAAMAA0AAAABAAIAAAANAA0AAAABAAIAAAAMAA4AAAABAAIAAAALAAwAAAABAAIAAAAMAAwAAAABAAIAAAANAAwAAAABAAIAAAAOAAwAAAABAAIAAAAOAA0AAAABAAIAAAAOAA4AAAABAAIAAAANAA4AAAABAAIAAAAJAAwAAAABAAIAAAAKAAwAAAABAAIAAAAPAA0AAAABAAIAAAAQAA0AAAABAAIAAAAIAAwAAAABAAIAAAAKAA8AAAABAAIAAAARAA0AAAABAAIAAAARAA4AAAABAAIAAAAQAA4AAAABAAIAAAAPAA8AAAABAAIAAAAOAA8AAAABAAIAAAANAA8AAAABAAIAAAAMAA8AAAABAAIAAAASAA4AAAABAAIAAAASAA8AAAABAAIAAAARAA8AAAABAAIAAAAQAA8AAAABAAIAAAAPAA4AAAABAAIAAAASAA0AAAABAAIAAAATAA0AAAABAAIAAAATAA4AAAABAAIAAAAPAAwAAAABAAIAAAAQAAwAAAABAAIAAAARAAwAAAABAAIAAAASAAwAAAABAAIAAAATAAwAAAABAAIAAAAUAAwAAAABAAIAAAAVAAwAAAABAAIAAAAWAAwAAAABAAIAAAAXAAwAAAABAAIAAAAYAAwAAAABAAIAAAAYAAsAAAABAAIAAAAZAAsAAAABAAIAAAAaAAsAAAABAAIAAAAbAAsAAAABAAIAAAAbAAwAAAABAAIAAAAcAAwAAAABAAIAAAAcAAsAAAABAAIAAAAXAAsAAAABAAIAAAAWAAsAAAABAAIAAAAVAAsAAAABAAIAAAASAAsAAAABAAIAAAATAAsAAAABAAIAAAAUAAsAAAABAAIAAAADAAwAAAABAAIAAAADAAsAAAABAAIAAAACAAsAAAABAAIAAAACAAwAAAABAAIAAAABAAwAAAABAAIAAAABAAsAAAABAAIAAAAEAAsAAAABAAIAAAAFAAsAAAABAAIAAAAGAAsAAAABAAIAAAAHAAsAAAABAAIAAAAIAAsAAAABAAIAAAALAAsAAAABAAIAAAAMAAsAAAABAAIAAAANAAsAAAABAAIAAAARAAsAAAABAAIAAAAQAAsAAAABAAIAAAAPAAsAAAABAAIAAAAOAAsAAAABAAIAAAALAAoAAAABAAEAAAAKAAoAAAABAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAIAAAACAA0AAAABAAIAAAACAA4AAAABAAIAAAADAA4AAAABAAIAAAADAA8AAAABAAIAAAACAA8AAAABAAIAAAABAA4AAAABAAIAAAABAA0AAAABAAIAAAACABAAAAABAAIAAAADABAAAAABAAIAAAAEABAAAAABAAIAAAAGAA8AAAABAAIAAAAGAA4AAAABAAIAAAAFAA4AAAABAAIAAAAEAA4AAAABAAIAAAADAA0AAAABAAIAAAAFAA0AAAABAAIAAAAGAA0AAAABAAIAAAAIAA4AAAABAAIAAAAIAA8AAAABAAIAAAAFAA8AAAABAAIAAAAEAA8AAAABAAIAAAAHAA4AAAABAAIAAAAJAA8AAAABAAIAAAD//woAAAAAAAIAAAD//wsAAAAAAAIAAAD//wwAAAAAAAIAAAD//w0AAAAAAAIAAAD//w4AAAAAAAIAAAD//w8AAAAAAAIAAAD//xAAAAABAAIAAAD//xEAAAABAAIAAAAAABAAAAABAAIAAAAfAAoAAAABAAEAAAAfAAsAAAABAAIAAAAfAAwAAAABAAIAAAAfAA0AAAABAAIAAAAfAA4AAAABAAIAAAAfAA8AAAABAAIAAAAfABAAAAABAAIAAAAdAAwAAAABAAIAAAAdAA0AAAABAAIAAAAdAA4AAAABAAIAAAAdAA8AAAABAAIAAAAdABAAAAABAAIAAAAdABEAAAABAAIAAAAeAAwAAAABAAIAAAAeAA0AAAABAAIAAAAeAA4AAAABAAIAAAAeAA8AAAABAAIAAAAeABAAAAABAAIAAAAeABEAAAABAAIAAAAdAAoAAAABAAEAAAAdAAsAAAABAAIAAAAeAAoAAAABAAEAAAAeAAsAAAABAAIAAAD//xIAAAABAAIAAAAAABIAAAABAAIAAAABABIAAAABAAIAAAADABIAAAABAAIAAAAFABIAAAABAAIAAAAEABIAAAABAAIAAAACABIAAAABAAIAAAAJABIAAAABAAIAAAAKABIAAAABAAIAAAAIABIAAAABAAIAAAAHABIAAAABAAIAAAAGABIAAAABAAIAAAAOABIAAAABAAIAAAANABIAAAABAAIAAAAMABIAAAABAAIAAAALABIAAAABAAIAAAAVABIAAAABAAIAAAAUABIAAAABAAIAAAATABIAAAABAAIAAAASABIAAAABAAIAAAARABIAAAABAAIAAAAQABIAAAABAAIAAAAPABIAAAABAAIAAAAZABIAAAABAAIAAAAYABIAAAABAAIAAAAXABIAAAABAAIAAAAWABIAAAABAAIAAAAaABIAAAABAAIAAAAbABIAAAABAAIAAAAfABIAAAABAAIAAAAeABIAAAABAAIAAAAdABIAAAABAAIAAAAcABIAAAABAAIAAAAeABMAAAABAAIAAAAfABMAAAABAAIAAAAdABMAAAABAAIAAAAcABMAAAABAAIAAAAbABMAAAABAAIAAAAaABMAAAABAAIAAAAZABMAAAABAAIAAAAYABMAAAABAAIAAAAXABMAAAABAAIAAAAWABMAAAABAAIAAAAVABMAAAABAAIAAAAUABMAAAABAAIAAAATABMAAAABAAIAAAASABMAAAABAAIAAAARABMAAAABAAIAAAAQABMAAAABAAIAAAAPABMAAAABAAIAAAAOABMAAAABAAIAAAANABMAAAABAAIAAAAMABMAAAABAAIAAAALABMAAAABAAIAAAAKABMAAAABAAIAAAAJABMAAAABAAIAAAAIABMAAAABAAIAAAAHABMAAAABAAIAAAAGABMAAAABAAIAAAAFABMAAAABAAIAAAAEABMAAAABAAIAAAADABMAAAABAAIAAAACABMAAAABAAIAAAABABMAAAABAAIAAAAAABMAAAABAAIAAAD//xMAAAABAAIAAAA=")
tile_set = SubResource("TileSet_8rhjg")

[node name="Img8596" type="Sprite2D" parent="Ground" unique_id=241209914]
position = Vector2(-769, -585)
texture = ExtResource("3_wae8j")
region_enabled = true
region_rect = Rect2(1372, 104, 490, 679)

[node name="Img8598" type="Sprite2D" parent="." unique_id=1240192624]
position = Vector2(1224, 515)
texture = ExtResource("2_hhfj6")

[node name="RockChain" type="Node2D" parent="." unique_id=62987813]
script = ExtResource("7_rock_chain")
player1_path = NodePath("../Player1")
player2_path = NodePath("../Player2")
rock_path = NodePath("../Rock")
rope_length_1 = 350.0
rope_length_2 = 200.0
pull_force = 3500.0

[node name="Player1" parent="." unique_id=769047023 instance=ExtResource("5_vcx5n")]
position = Vector2(264, 580)
jump_velocity = -1000.0

[node name="Player2" parent="." unique_id=1054873841 instance=ExtResource("5_vcx5n")]
position = Vector2(200, 580)
player_id = 2
jump_velocity = -1000.0

[node name="FlagPlatform" type="Node2D" parent="." unique_id=576703315]
position = Vector2(1750, 550)

[node name="Flag" parent="FlagPlatform" unique_id=1820854309 instance=ExtResource("12_flag")]
position = Vector2(0, 16)

[node name="FlagTrigger" type="Area2D" parent="." unique_id=206801600]
position = Vector2(1147, 500)
collision_layer = 0
collision_mask = 2
script = ExtResource("13_trigger")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagTrigger" unique_id=1172186152]
shape = SubResource("RectangleShape2D_trigger")

[node name="Rock" type="RigidBody2D" parent="." unique_id=2020030001]
position = Vector2(122, 566)
mass = 5.0
linear_damp = 0.1
angular_damp = 0.3

[node name="Sprite2D" type="Sprite2D" parent="Rock" unique_id=1504274957]
position = Vector2(0, 2)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_wae8j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rock" unique_id=1133111019]
shape = SubResource("CircleShape2D_rock")

[node name="UI" type="CanvasLayer" parent="." unique_id=953604253]

[node name="TimerLabel" type="Label" parent="UI" unique_id=397840611]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32

[node name="InstructionLabel" type="Label" parent="UI" unique_id=1557264769]
offset_left = 20.0
offset_top = 70.0
offset_right = 800.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 24

[node name="Camera2D" type="Camera2D" parent="." unique_id=1409567578]
position = Vector2(960, 540)

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
